[gd_scene load_steps=13 format=2]

[ext_resource path="res://menu.gd" type="Script" id=1]
[ext_resource path="res://Fuente/CFNightofTerrorPERSONAL-Reg.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://asset/musica/y2matecom_musica_medieval_6z6oXMOYGoM.ogg" type="AudioStream" id=3]
[ext_resource path="res://asset/imagenes/Sin t√≠tulo.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=7]
resource_name = "creditos"
tracks/0/type = "value"
tracks/0/path = NodePath("creditos:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("atras:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
resource_name = "atras"
tracks/0/type = "value"
tracks/0/path = NodePath("atras:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("creditos:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="menu" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 412.911
margin_top = 184.472
margin_right = 612.911
margin_bottom = 284.472
custom_fonts/font = SubResource( 2 )
text = "PLAY"

[node name="Button2" type="Button" parent="."]
margin_left = 209.618
margin_top = 302.786
margin_right = 409.618
margin_bottom = 402.786
custom_fonts/font = SubResource( 1 )
text = "creditos"

[node name="Button3" type="Button" parent="."]
margin_left = 426.734
margin_top = 405.938
margin_right = 626.734
margin_bottom = 505.938
custom_fonts/font = SubResource( 3 )
text = "SILENCIO"

[node name="Button4" type="Button" parent="."]
margin_left = 640.001
margin_top = 299.964
margin_right = 840.001
margin_bottom = 399.964
custom_fonts/font = SubResource( 4 )
text = "SALIR"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[node name="unpaz" type="Sprite" parent="."]
position = Vector2( 910.75, 89.647 )
scale = Vector2( 0.255905, 0.599097 )
texture = ExtResource( 4 )

[node name="creditos" type="Button" parent="."]
visible = false
margin_left = 186.0
margin_top = 186.0
margin_right = 849.0
margin_bottom = 506.0
custom_fonts/font = SubResource( 5 )
text = "Juego realizado por: "

[node name="atras" type="Button" parent="."]
visible = false
margin_left = 418.923
margin_top = 513.383
margin_right = 618.923
margin_bottom = 569.383
custom_fonts/font = SubResource( 6 )
text = "atras"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/creditos = SubResource( 7 )

[node name="atras2" type="AnimationPlayer" parent="."]
anims/atras = SubResource( 8 )
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="atras" to="." method="_on_atras_pressed"]
